--- a/diferenciales/input/1-ecuaciones-1er-orden.tex
+++ b/diferenciales/input/1-ecuaciones-1er-orden.tex
@@ -1072,7 +1072,7 @@ Consideramos $\mbf{x}'' + a\mbf{x}' + b\mbf{x} = 0,\ \forall a,b \in \R$. Vamos 
     \end{gather*}
 \end{eg}
 
-\begin{eg}[Ecuación lineal de orden 2: $\mbf{x}''+3\mbf{x}'+2\mbf{x}=te^t$ ]\label{eg:ecua-lin-tet} %%TODO: Completar de la foto.
+\begin{eg}[Ecuación lineal de orden 2: $\mbf{x}''+3\mbf{x}'+2\mbf{x}=te^t$ ]\label{eg:ecua-lin-tet}
     Intentamos ver si $x(t) = e^t(\alpha + \beta t)$ es solución. Entonces:
     \begin{gather*}
         x'(t) = e^{ t}(\alpha + \beta + \beta t) \\ x''(t) = e^t (\alpha + 2\beta + \beta t)
@@ -1331,11 +1331,11 @@ Como comentarios a este desarrollo:
     \item Estas propiedades están enunciadas sobre intervalos compactos, se pueden ir ampliando los intervalos hasta llenar $\R$.
     \end{enumerate}
 \end{obs}
-\begin{eg}
+\begin{eg}[Resolución de la ecuación homogénea de orden II a partir de una solución]
     Sea $(1-x^2)\mbf{y}'' - 2x\mbf{y}' + 2\mbf{y} = 0$ con $x\in(-1,\ 1)$.\\%TODO: Pedir polinomios de Legendre
     Es fácil ver que $y_1(x) = x$ es solución. Vamos a encontrar todas la soluciones de la ecuación.
     \begin{enumerate}
-        \item Como es una ecuación homogénea de orden 2 basta encontrar $y_2(x)$ linealmente independiente de $\mbf{y}_1$.
+        \item Como es una ecuación homogénea de orden 2 basta encontrar $y_2(x)$ linealmente independiente de $\mbf{y}_1$, ya que $\mbf{y} = c_1 \mbf{y}_1 + c_2 \mbf{y}_2$.
         \item Buscamos $y_2(x) = u(x)\cdot y_1(x) = x \cdot u(x)$. Derivando obtenemos que:\\
         $\mbf{y}_2$ es solución $\iff \frac{\mbf{u}''}{\mbf{u}'} = \frac{4x^2-2}{x-x^3}$
         \item Por tanto:$$
@@ -1348,4 +1348,113 @@ Como comentarios a este desarrollo:
         u(x) = -\frac{1}{x} + \frac{1}{2}\log\left(\frac{1+x}{1-x}\right)\\
         \mbf{y}_2 = -1 + \frac{x}{2}\log\left(\frac{1+x}{1-x}\right)
     \end{gather*}
+
+    Podemos observar que $\mbf{y}_2 = -1 + \frac{x}{2}\log\left|\frac{1+x}{1-x}\right|$ es solución en los dos intervalos de $|x| > 1$, aunque \texit{explota} en $x = \pm 1$.
+    $$
+        \mbf{y}'' - \frac{2x}{1-x^2}\mbf{y}' + \frac{2}{1-x^2}\mbf{y} = 0
+    $$
 \end{eg}
+\begin{eg}[Resolución de una ecuación lineal de orden II por variación de las constantes]
+    Sea $(\mathcal{ED}) \equiv \mbf{y}'' - \mbf{y} = e^{2x}$ que cumple $y(0) = 0$.\\
+    La ecuación homogénea es: $(\mathcal{ED}_h) \equiv \mbf{y}'' - \mbf{y} = 0 \implies \lambda^2 -1 = 0$. Por tanto, $y_1(x) = e^x$, $y_2(x) = e^{-x}$ resuelven $(\mathcal{ED}_h)$ y entonces:
+    $$
+        \mbf{y}_h = c_1 e^x + c_2 e^{-x}
+    $$
+    Además, la solución general de $(\mathcal{ED})$ es la suma de una solución particular de $(\mathcal{ED})$ más la solución general de $(\mathcal{ED}_h)$, que ya la sabemos. Vamos a hallarla por variación de las constantes. Llamamos $y_p(x)$ a una solución particular de $(\mathcal{ED})$. Entonces:
+    $$
+        y_p(x) = \mbf{u}_1 \mbf{y}_1 + \mbf{u}_2 \mbf{y}_2 \implies
+        \left[
+        \begin{matrix}
+            \mbf{y}_1 & \mbf{y}_2\\
+            \mbf{y}_1' & \mbf{y}_2'
+        \end{matrix}
+        \right]
+        \left[
+        \begin{matrix}
+            \mbf{u}'_1\\
+            \mbf{u}'_2
+        \end{matrix}
+        \right] =
+        \left[
+        \begin{matrix}
+            0\\
+            e^{2x}
+        \end{matrix}
+        \right]
+    $$
+    Resolviendo el sistema, hallamos: $2 \mbf{u}'_1 e^x = e^{2x}$, es decir, $\mbf{u}'_1 = \frac{e^x}{2} \implies \mbf{u}_1= \frac{e^x}{2}$. Sabiendo esto, hallamos $\mbf{u}_2 = -\frac{e^{3x}}{6}$. Por tanto:
+    $$
+        \mbf{y}_p = \frac{e^x}{2} e^x + \left(-\frac{e^{3x}}{6}\right)e^{-x} = \frac{1}{3} e^{2x}
+    $$
+    Y entonces nuestra solución general $y(x) = y_h(x) + y_p(x)$ es:
+    $$
+        y(x) = \frac{e^{2x}}{3} + c_1 e^x + c_2 e^{-x}
+    $$
+    y para nuestro caso concreto, como $y(0)=0$, podemos hallar que:
+    $$
+        c_2 = -\frac{1}{3} - c_1
+    $$
+\end{eg}
+
+\begin{obs}
+    Sea $\mbf{y}'' - \mbf{y} = e^{2x} + x e^{5x}$, si $\mbf{y}_j$ es solución de:
+    $$
+        \mbf{y}'' + p(x) \mbf{y}' + q(x) = r_j(x), \text{ con } j=1,2
+    $$
+    entonces $\alpha_1 \mbf{y}_1 + \alpha_2 \mbf{y}_2$ es solución de:
+    $$
+        \mbf{y}'' + p(x) \mbf{y}' + q(x) \mbf{y} = r(x) \text{ con } r(x) = \alpha_1 r_1(x) + \alpha_2 r_2(x)
+    $$
+\end{obs}
+
+\begin{eg}[Resonancia. Oscilador armónico simple.]
+    Sea $\mbf{x}'' + \omega_0^2 \mbf{x} = 0$  con $\omega_0 \neq 0$ un sistema físico. Es un ejemplo conocido pues es el oscilador armónico simple, y la solución general es:
+    $$
+        \mbf{x} = a \sin(\omega_0 t) + b \cos(\omega_0 t)
+    $$
+    es decir, son soluciones periódicas, de periodo $\sfrac{2\pi}{\omega_0}$ y por tanto de frecuencia $\sfrac{\omega_0}{2\pi}$.
+    Vamos a aplicarle al sistema una fuerza externa periódica. Entonces nuestra ecuación es de la forma:
+    $$
+        \mbf{x}'' + \omega_0^2 \mbf{x} = cos(\omega t)
+    $$
+    Para resolverla, vamos a diferenciar dos casos.\\\\
+    Caso $\omega \neq \omega_0$.\\Probamos $x(t) = a\cos(\omega t)$. ($\cos(\omega t)$ no es solución de la homogénea pues $\omega \neq \omega_0$).
+    Probando:
+    $$
+        x(t) = a\cos(\omega t) \text{ hallamos } a = \frac{1}{\omega_0^2 - \omega^2} \text{ es decir, la solución general de la } \mathcal{ED} \text{ es:}
+    $$
+    $$
+        \frac{\cos(\omega t)}{\omega_0^2 - \omega^2} + \alpha \sen(\omega_0 t) + \beta\cos(\omega_0 t)
+    $$
+    Caso $\omega = \omega_0$ (resonancia).\\
+    Ahora $\cos(\omega_0 t) = \cos(\omega t)$. Por tanto, tenemos que resolver la ecuación homogénea. En este caso, intentamos una solución particular del tipo $\mbf{x} = a t \cos(\omega_0 t) + b t \sin(\omega_0 t)$ (como ayuda para saber de donde sale esto, ver el ejemplo \ref{eg:ecua-lin-tet}). Desarrollando, hallamos:
+    $$
+        \mbf{x}'' + \omega_0^2 x = \cos(\omega_0 t)
+    $$
+    Eso requiere que $a = 0$, $2\omega_0 b = 1$, es decir, $b = \frac{1}{2 \omega_0}$. Lo que implica que la solución particular es: $x_p(t) = \frac{t \sin(\omega_0 t)}{2 \omega_0}$ y por tanto la solución general:
+    $$
+        x(t) = \frac{t \sin(\omega_0 t)}{2 \omega_0} + \alpha \cos(\omega_0 t) + \beta \sin(\omega_0 t)
+    $$
+    Cuya representación gráfica es semejante a la siguiente:
+    \begin{center}
+        \begin{tikzpicture}
+            \begin{axis}[domain=0:50,samples=150,
+            %restrict y to domain=-5:5,
+            xtick=\empty,ytick=\empty,
+            %extra x ticks={0.8,1.4}, linea vertical
+            %extra y ticks=3.333333,extra y tick labels={$\frac{10}{3}$}, linea horizontal
+            %grid=both,
+            axis lines=middle, axis equal
+            ]
+                \addplot+[no marks, thick] ({x},{x}) node[pos=0.3, above, sloped] {$x=t$};
+                \addplot+[no marks, thick] ({x},{-x}) node[pos=0.3, below, sloped] {$x=-t$};
+                \addplot+[no marks, thick] ({x},{x * sin(deg(x)/2)});
+            \end{axis}
+        \end{tikzpicture}
+    \end{center}
+    %%TODO: Añadir dibujo.
+\end{eg}
+\begin{obs}
+    Como comentario, es más sencillo resolver las ecuaciones usando $e^{i \omega t},\ e^{-i \omega t}$ y luego separando la parte real e imaginaria.
+\end{obs}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Clase del 20/02
